[package]
name = "wonderjam_two_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
bevy-inspector-egui = "0.10"
smooth-bevy-cameras = "0.4.0"
rand = "0.8.5"
bytemuck = "1.7"
bevy_asset_loader = "0.10"